# rust-reliability-series

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: github-student-workflow.md  repo-tour.md  series-roadmap.md  version-0-weak-system.md
docs/episode_notes/: README.md  episode-00-v0-weak-system.md
scripts/demo/: v0_happy_path.ps1  v0_happy_path.sh
src/: app_state.rs  main.rs
src/api/: handlers.rs  routes.rs
src/domain/: errors.rs  execution.rs  mod.rs  status.rs
src/provider/: adapter.rs  fake_provider.rs  mod.rs
src/storage/: repository.rs  sqlite.rs
src/telemetry/: logging.rs
