[package]
name = "rust-reliability-series"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
